Translation update done using Pootle.

--- a/po/el.po
+++ b/po/el.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-29 12:25+0200\n"
+"PO-Revision-Date: 2011-07-29 12:27+0200\n"
 "Last-Translator: Panagiotis Papazoglou <papaz_p@yahoo.com>\n"
 "Language-Team: greek <el@li.org>\n"
 "Language: el\n"
@@ -7861,9 +7861,9 @@ msgid ""
 msgstr ""
 "Εμφανίζει μόνο μέρος ενός αλφαριθμητικού. Η πρώτη επιλογή είναι η θέση στην "
 "οποία ξεκινά η εμφάνιση του κειμένου (Προεπιλογή: 0). Η δεύτερη επιλογή "
-"είναι το μήκος του κειμένου. Αν μείνει κενό θα επιστραφεί όλο το "
-"αλφαριθμητικό. Η τρίτη επιλογή καθορίζει ποιοι χαρακτήρες θα ακολουθούν το "
-"κείμενο όταν εμφανίζεται μέρος του (Προεπιλογή: ...) ."
+"είναι ο αριθμός των χαρακτήρων που θα επιστραφούν (Προεπιλογή: μέχρι το "
+"τέλος του κειιμένου). Η τρίτη επιλογή καθορίζει ποιοι χαρακτήρες θα "
+"ακολουθούν το κείμενο όταν εμφανίζεται τμήμα του (Προεπιλογή: «...») ."
 
 #: libraries/user_preferences.inc.php:32
 msgid "Manage your settings"
