Translation update done using Pootle.

--- a/po/el.po
+++ b/po/el.po
@@ -7980,7 +7980,7 @@ msgstr ""
 "πρόσβασης) που αντιστοιχούν στον προεπιλεγμένο λογαριασμό χρήστη MySQL. Ο "
 "διακομιστής MySQL σας που τρέχει με αυτή τη ρύθμιση, είναι ανοιχτός σε "
 "επιθέσεις και θα πρέπει να διορθώσετε το πρόβλημα εισάγωντας κωδικό "
-"πρόσβασης για το χρήστη «root».."
+"πρόσβασης για το χρήστη «root»."
 
 #: main.php:251
 msgid ""
