Translation update done using Pootle.

--- a/po/el.po
+++ b/po/el.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-29 12:27+0200\n"
+"PO-Revision-Date: 2011-07-29 12:28+0200\n"
 "Last-Translator: Panagiotis Papazoglou <papaz_p@yahoo.com>\n"
 "Language-Team: greek <el@li.org>\n"
 "Language: el\n"
@@ -2760,9 +2760,8 @@ msgid ""
 "cross-frame scripting attacks"
 msgstr ""
 "Ενεργοποιώντας αυτό, επιτρέπει μια σελίδα που βρίσκεται σε άλλο διακομιστή "
-"να καλεί το phpMyAdmin μέσα σε ένα πλαίσιο (frame), κάτι που είναι "
-"[strong]τρύπα ασφαλείας[/strong] που επιτρέπει εισβολές στον κώδικα μέσω "
-"frames"
+"να καλεί το phpMyAdmin μέσα σε ένα frame, κάτι που είναι [strong]τρύπα "
+"ασφαλείας[/strong] που επιτρέπει εισβολές στον κώδικα μέσω frames"
 
 #: libraries/config/messages.inc.php:22
 msgid "Allow third party framing"
