Translation update done using Pootle.

--- a/po/el.po
+++ b/po/el.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-29 12:29+0200\n"
+"PO-Revision-Date: 2011-07-29 12:30+0200\n"
 "Last-Translator: Panagiotis Papazoglou <papaz_p@yahoo.com>\n"
 "Language-Team: greek <el@li.org>\n"
 "Language: el\n"
@@ -7774,15 +7774,14 @@ msgid ""
 "documentation for PHP's strftime() function and for \"utc\" it is done using "
 "gmdate() function."
 msgstr ""
-"Προβάλεται ένα πεδίο ημερομηνίας-ώρας (TIME, TIMESTAMP, DATETIME ή "
-"αριθμητικός χρόνος UNIX) ως μορφοποιημένη ημερομηνία. Η πρώτη επιλογή είναι "
-"το αντιστάθμισμα (σε ώρες) που θα προστεθεί στην υπαρχουσα (Προεπιλογή: 0) "
-"Χρησιμοποιείστε τη δεύτερη επιλογή για να ορίσετε μια μορφή "
-"ημερομηνίας-ώρας. Η τρίτη επιλογή ορίζει αν θέλετε να δείτε την τοπική ή την "
-"παγκόσμια ώρα (χρήση «local» ή «utc» αντίστοιχα). Σύμφωνα με αυτό, η μορφή "
-"της ημερομηνίας έχει διαφορετική τιμή - για το «local» δείτε την τεκμηρίωση "
-"για τη συνάρτηση strftime() της PHP και για το «utc» γίνεται χρησιμοποιώντας "
-"τη συνάρτηση gmdate()."
+"Προβάλεται ένα πεδίο TIME, TIMESTAMP, DATETIME ή αριθμητικός χρόνος UNIX ως "
+"μορφοποιημένη ημερομηνία. Η πρώτη επιλογή είναι το αντιστάθμισμα (σε ώρες) "
+"που θα προστεθεί στην υπαρχουσα (Προεπιλογή: 0) Χρησιμοποιείστε τη δεύτερη "
+"επιλογή για να ορίσετε μια μορφή ημερομηνίας-ώρας. Η τρίτη επιλογή ορίζει αν "
+"θέλετε να δείτε την τοπική ή την παγκόσμια ώρα (χρήση «local» ή «utc» "
+"αντίστοιχα). Σύμφωνα με αυτό, η μορφή της ημερομηνίας έχει διαφορετική τιμή "
+"- για το «local» δείτε την τεκμηρίωση για τη συνάρτηση strftime() της PHP "
+"και για το «utc» γίνεται χρησιμοποιώντας τη συνάρτηση gmdate()."
 
 #: libraries/transformations/text_plain__external.inc.php:9
 msgid ""
