Translation update done using Pootle.

--- a/po/el.po
+++ b/po/el.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-29 12:31+0200\n"
+"PO-Revision-Date: 2011-07-29 12:32+0200\n"
 "Last-Translator: Panagiotis Papazoglou <papaz_p@yahoo.com>\n"
 "Language-Team: greek <el@li.org>\n"
 "Language: el\n"
@@ -8969,8 +8969,8 @@ msgid ""
 "Now, add the following lines at the end of [mysqld] section in your my.cnf "
 "and please restart the MySQL server afterwards."
 msgstr ""
-"Τώρα, προσθέστε της ακόλουθες γραμμές στο τέλος του αρχείου my.cnf και "
-"επανεκκινήστε τον διακομιστή MySQL."
+"Τώρα, προσθέστε της ακόλουθες γραμμές στο τέλος του τομέα [mysqld] του "
+"αρχείου my.cnf και επανεκκινήστε τον διακομιστή MySQL."
 
 #: server_replication.php:228
 msgid ""
