--- a/po/el.po
+++ b/po/el.po
@@ -9765,8 +9765,7 @@ msgstr ""
 #: server_status.php:1151
 msgid "The number of rows waiting to be written in INSERT DELAYED queues."
 msgstr ""
-"Ο αριθμός των γραμμών σε αναμονή για εγγραφή στις σειρές ΚΑΘΥΣΤΕΡΗΜΕΝΩΝ "
-"ΕΙΣΑΓΩΓΩΝ (INSERT DELAYED)."
+"Ο αριθμός των γραμμών σε αναμονή για εγγραφή στις σειρές INSERT DELAYED."
 
 #: server_status.php:1152
 msgid ""
