--- a/po/el.po
+++ b/po/el.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-29 12:34+0200\n"
+"PO-Revision-Date: 2011-07-29 12:35+0200\n"
 "Last-Translator: Panagiotis Papazoglou <papaz_p@yahoo.com>\n"
 "Language-Team: greek <el@li.org>\n"
 "Language: el\n"
@@ -11091,7 +11091,7 @@ msgid ""
 "relation exists."
 msgstr ""
 "Μια εσωτερική συσχέτιση δεν είναι απαραίτητη όταν υπάρχει μια αντίστοιχη "
-"συσχέτιση ΜΗ ΔΙΑΚΡΙΤΟΥ ΚΛΕΙΔΙΟΥ (FOREIGN KEY)."
+"συσχέτιση FOREIGN KEY."
 
 #: tbl_relation.php:410
 msgid "Foreign key constraint"
