Translation update done using Pootle.

--- a/po/el.po
+++ b/po/el.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-29 12:47+0200\n"
+"PO-Revision-Date: 2011-07-29 12:48+0200\n"
 "Last-Translator: Panagiotis Papazoglou <papaz_p@yahoo.com>\n"
 "Language-Team: greek <el@li.org>\n"
 "Language: el\n"
@@ -3783,7 +3783,7 @@ msgid ""
 "and will be deleted as soon as you close the browser window. This is "
 "recommended for non-trusted environments."
 msgstr ""
-"Ορίζει για πόσο χρόνο (σε δευτερόλεπτα) ένα cookie σύνδεσης πρέπει να να "
+"Ορίζει για πόσο χρόνο (σε δευτερόλεπτα) ένα cookie σύνδεσης πρέπει να "
 "αποθηκεύεται στο φυλλομετρητή. Η προεπιλογή 0 σημαίνει ότι θα κρατηθεί μόνο "
 "για την τρέχουσα συνεδρία και θα διαγραφεί μόλις κλείσετε τον φυλλομετρητή. "
 "Αυτό προτείνεται για μη αξιόπιστα περιβάλλοντα."
