Translation update done using Pootle.

--- a/po/el.po
+++ b/po/el.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-29 12:48+0200\n"
+"PO-Revision-Date: 2011-07-29 12:49+0200\n"
 "Last-Translator: Panagiotis Papazoglou <papaz_p@yahoo.com>\n"
 "Language-Team: greek <el@li.org>\n"
 "Language: el\n"
@@ -9602,7 +9602,7 @@ msgid ""
 "wait for it to be flushed before continuing."
 msgstr ""
 "Ο αριθμός των αναμονών που έγιναν εξαιτίας του μικρού μεγέθος του buffer "
-"καταγραφής και και έπρεπε να αναμένεται να εκκαθαριστεί πριν συνεχίσει."
+"καταγραφής και έπρεπε να αναμένεται να εκκαθαριστεί πριν συνεχίσει."
 
 #: server_status.php:1123
 msgid "The number of log write requests."
