--- a/po/el.po
+++ b/po/el.po
@@ -105,7 +105,7 @@ msgstr "Δεν ρυθμίστηκε διακομιστής ροής blob!"
 
 #: bs_disp_as_mime_type.php:35
 msgid "Failed to fetch headers"
-msgstr "Αποτυχία εγγραφής του αρχείου στο δίσκο."
+msgstr "Αποτυχία εγγραφής του αρχείου στο δίσκο"
 
 #: bs_disp_as_mime_type.php:41
 msgid "Failed to open remote URL"
