--- a/po/el.po
+++ b/po/el.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-29 12:49+0200\n"
+"PO-Revision-Date: 2011-07-29 12:50+0200\n"
 "Last-Translator: Panagiotis Papazoglou <papaz_p@yahoo.com>\n"
 "Language-Team: greek <el@li.org>\n"
 "Language: el\n"
@@ -589,7 +589,7 @@ msgstr "Εσωτερικό πεδίο:"
 
 #: db_structure.php:61
 msgid "No tables found in database"
-msgstr "Δεν βρέθηκαν Πίνακες στη βάση δεδομένων."
+msgstr "Δεν βρέθηκαν Πίνακες στη βάση δεδομένων"
 
 #: db_structure.php:271 tbl_operations.php:688
 #, php-format
