Translation update done using Pootle.

--- a/po/el.po
+++ b/po/el.po
@@ -1163,7 +1163,7 @@ msgstr "Μέσο φορτίο"
 #. l10n: Questions is the name of a MySQL Status variable
 #: js/messages.php:102
 msgid "Questions"
-msgstr "Ερωτήσεις:"
+msgstr "Ερωτήσεις"
 
 #: js/messages.php:103 server_status.php:894
 msgid "Traffic"
