--- a/po/el.po
+++ b/po/el.po
@@ -2141,7 +2141,7 @@ msgstr ""
 
 #: libraries/auth/cookie.auth.lib.php:211
 msgid "Server:"
-msgstr "Διακομιστής"
+msgstr "Διακομιστής:"
 
 #: libraries/auth/cookie.auth.lib.php:216
 msgid "Username:"
