--- a/po/el.po
+++ b/po/el.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-29 12:51+0200\n"
+"PO-Revision-Date: 2011-07-29 12:52+0200\n"
 "Last-Translator: Panagiotis Papazoglou <papaz_p@yahoo.com>\n"
 "Language-Team: greek <el@li.org>\n"
 "Language: el\n"
@@ -2212,7 +2212,7 @@ msgstr "Σφάλμα PBMS"
 
 #: libraries/blobstreaming.lib.php:262
 msgid "PBMS connection failed:"
-msgstr "Η σύνδεση PBMS απέτυχε"
+msgstr "Η σύνδεση PBMS απέτυχε:"
 
 #: libraries/blobstreaming.lib.php:307
 msgid "PBMS get BLOB info failed:"
