--- a/po/el.po
+++ b/po/el.po
@@ -5145,7 +5145,7 @@ msgstr "Αχρήστευση εγγραφής(ών)"
 
 #: libraries/display_export.lib.php:152
 msgid "Number of rows:"
-msgstr "Αριθμός εγγραφών"
+msgstr "Αριθμός εγγραφών:"
 
 #: libraries/display_export.lib.php:155
 msgid "Row to begin at:"
