--- a/po/el.po
+++ b/po/el.po
@@ -5244,7 +5244,7 @@ msgstr ""
 
 #: libraries/display_export.lib.php:340 libraries/display_import.lib.php:260
 msgid "Encoding Conversion:"
-msgstr "Μετατροπή κωδικοποίησης"
+msgstr "Μετατροπή κωδικοποίησης:"
 
 #: libraries/display_import.lib.php:66
 msgid ""
