--- a/po/el.po
+++ b/po/el.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-29 12:53+0200\n"
+"PO-Revision-Date: 2011-07-29 12:54+0200\n"
 "Last-Translator: Panagiotis Papazoglou <papaz_p@yahoo.com>\n"
 "Language-Team: greek <el@li.org>\n"
 "Language: el\n"
@@ -5284,7 +5284,7 @@ msgstr "Εισαγωγή στον πίνακα «%s»"
 
 #: libraries/display_import.lib.php:139
 msgid "File to Import:"
-msgstr "Αρχείο για εισαγωγή"
+msgstr "Αρχείο για εισαγωγή:"
 
 #: libraries/display_import.lib.php:156
 #, php-format
