--- a/po/el.po
+++ b/po/el.po
@@ -5328,7 +5328,7 @@ msgstr ""
 
 #: libraries/display_import.lib.php:228
 msgid "Number of rows to skip, starting from the first row:"
-msgstr "Αριθμός εγγραφών που θα παραβλεφθούν από την αρχή"
+msgstr "Αριθμός εγγραφών που θα παραβλεφθούν από την αρχή:"
 
 #: libraries/display_import.lib.php:250
 msgid "Format-Specific Options:"
