--- a/po/el.po
+++ b/po/el.po
@@ -5999,7 +5999,7 @@ msgstr "Γραμμές που τελειώνουν με:"
 #: libraries/export/ods.php:24 libraries/export/odt.php:60
 #: libraries/export/xls.php:24 libraries/export/xlsx.php:24
 msgid "Replace NULL with:"
-msgstr "Αντικατάσταση τιμής NULL με"
+msgstr "Αντικατάσταση τιμής NULL με:"
 
 #: libraries/export/csv.php:29 libraries/export/excel.php:24
 msgid "Remove carriage return/line feed characters within columns"
