--- a/po/el.po
+++ b/po/el.po
@@ -6409,7 +6409,7 @@ msgstr "Εισαγωγή νομισμάτων <i>(π.χ. €5,00 αντί 5,00)<
 
 #: libraries/import/sql.php:33
 msgid "SQL compatibility mode:"
-msgstr "Κατάσταση συμβατότητας SQL"
+msgstr "Κατάσταση συμβατότητας SQL:"
 
 #: libraries/import/sql.php:43
 msgid "Do not use <code>AUTO_INCREMENT</code> for zero values"
