--- a/po/el.po
+++ b/po/el.po
@@ -9939,7 +9939,7 @@ msgstr "Ο αριθμός των ταξινομήσεων που έγιναν σ
 
 #: server_status.php:1179
 msgid "The number of times that a table lock was acquired immediately."
-msgstr "Οι φορές που ένα κλείδωμα πινακα ανακτήθηκε άμεσα.."
+msgstr "Οι φορές που ένα κλείδωμα πινακα ανακτήθηκε άμεσα."
 
 #: server_status.php:1180
 msgid ""
