--- a/po/el.po
+++ b/po/el.po
@@ -10133,7 +10133,7 @@ msgstr "Συχνά εποπτευόμενα"
 
 #: server_status.php:1424
 msgid "or type variable name:"
-msgstr "ή όνομα τύπου μεταβλητής"
+msgstr "ή όνομα τύπου μεταβλητής:"
 
 #: server_status.php:1428
 msgid "Display as differential value"
