--- a/po/el.po
+++ b/po/el.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-29 12:59+0200\n"
+"PO-Revision-Date: 2011-07-29 13:01+0200\n"
 "Last-Translator: Panagiotis Papazoglou <papaz_p@yahoo.com>\n"
 "Language-Team: greek <el@li.org>\n"
 "Language: el\n"
@@ -5357,7 +5357,7 @@ msgstr "Πατήστε για εναλλαγή επισήμανσης"
 
 #: libraries/display_tbl.lib.php:417
 msgid "Click the drop-down arrow<br />to toggle column's visibility"
-msgstr "Πατήστε το βέλος προς τα κάτω<br />για εναλλαγή της εμφάνισης στηλών"
+msgstr "Πατήστε το βέλος drop-down<br />για εναλλαγή της εμφάνισης στηλών"
 
 #: libraries/display_tbl.lib.php:428
 #, php-format
