--- a/po/el.po
+++ b/po/el.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-29 13:09+0200\n"
+"PO-Revision-Date: 2011-07-29 13:10+0200\n"
 "Last-Translator: Panagiotis Papazoglou <papaz_p@yahoo.com>\n"
 "Language-Team: greek <el@li.org>\n"
 "Language: el\n"
@@ -4331,8 +4331,9 @@ msgid ""
 "Leave blank for no [a@http://wiki.phpmyadmin.net/pma/relation]relation-links"
 "[/a] support, suggested: [kbd]pma_relation[/kbd]"
 msgstr ""
-"Αφήστε το κενό για να μην υπάρχει υποστήριξη [a@http://wiki.phpmyadmin.net/"
-"pma/relation]συνδέσμων-συσχετίσεων[/a]. Προτείνεται: [kbd]pma_relation[/kbd]"
+"Αφήστε το κενό για να μην υπάρχει υποστήριξη "
+"[a@http://wiki.phpmyadmin.net/pma/relation]συνδέσμων-συσχετίσεων[/a]. "
+"Προτείνεται: [kbd]pma_relation[/kbd]"
 
 #: libraries/config/messages.inc.php:412
 msgid "Relation table"
