--- a/po/el.po
+++ b/po/el.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-29 13:15+0200\n"
+"PO-Revision-Date: 2011-07-29 13:16+0200\n"
 "Last-Translator: Panagiotis Papazoglou <papaz_p@yahoo.com>\n"
 "Language-Team: greek <el@li.org>\n"
 "Language: el\n"
@@ -117,8 +117,8 @@ msgid ""
 "The %s file is not available on this system, please visit www.phpmyadmin.net "
 "for more information."
 msgstr ""
-"Το αρχείο %s δεν είναι διαθέσιμο σε αυτό το σύστημα. Eπισκεφτείτε το www."
-"phpmyadmin.net για περισσότερες πληροφορίες."
+"Το αρχείο %s δεν είναι διαθέσιμο σε αυτό το σύστημα, για αυτό επισκεφτείτε "
+"το www.phpmyadmin.net για περισσότερες πληροφορίες."
 
 #: db_create.php:58
 #, php-format
