--- a/po/el.po
+++ b/po/el.po
@@ -589,7 +589,7 @@ msgstr "Εσωτερικό πεδίο:"
 
 #: db_structure.php:61
 msgid "No tables found in database"
-msgstr "Δεν βρέθηκαν Πίνακες στη βάση δεδομένων"
+msgstr "Δεν βρέθηκαν πίνακες στη βάση δεδομένων"
 
 #: db_structure.php:271 tbl_operations.php:688
 #, php-format
