--- a/po/el.po
+++ b/po/el.po
@@ -702,7 +702,7 @@ msgstr "Έλεγχος πίνακα"
 #: db_structure.php:509 tbl_operations.php:653 tbl_structure.php:842
 #: tbl_structure.php:844
 msgid "Optimize table"
-msgstr "Βελτιστοποίηση Πίνακα"
+msgstr "Βελτιστοποίηση πίνακα"
 
 #: db_structure.php:511 tbl_operations.php:640
 msgid "Repair table"
