--- a/po/el.po
+++ b/po/el.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-29 13:17+0200\n"
+"PO-Revision-Date: 2011-07-29 13:18+0200\n"
 "Last-Translator: Panagiotis Papazoglou <papaz_p@yahoo.com>\n"
 "Language-Team: greek <el@li.org>\n"
 "Language: el\n"
@@ -710,7 +710,7 @@ msgstr "Επιδιόρθωση πίνακα"
 
 #: db_structure.php:513 tbl_operations.php:627
 msgid "Analyze table"
-msgstr "Ανάλυση Πίνακα"
+msgstr "Ανάλυση πίνακα"
 
 #: db_structure.php:515
 msgid "Add prefix to table"
