Translation update done using Pootle.

--- a/po/el.po
+++ b/po/el.po
@@ -843,8 +843,8 @@ msgstr "Δεν υπάρχει διαθέσιμος χώρος για την απ
 msgid ""
 "File %s already exists on server, change filename or check overwrite option."
 msgstr ""
-"Το αρχείο %s υπάρχει ήδη στον διακομιστή. Επιλέξτε διαφορετικό όνομα αρχείου "
-"ή ενεργοποιήστε την επιλογή αντικατάστασης."
+"Το αρχείο %s υπάρχει ήδη στον διακομιστή, για αυτό επιλέξτε διαφορετικό "
+"όνομα αρχείου ή ενεργοποιήστε την επιλογή αντικατάστασης."
 
 #: export.php:314 export.php:318
 #, php-format
