--- a/po/el.po
+++ b/po/el.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-29 13:18+0200\n"
+"PO-Revision-Date: 2011-07-29 13:19+0200\n"
 "Last-Translator: Panagiotis Papazoglou <papaz_p@yahoo.com>\n"
 "Language-Team: greek <el@li.org>\n"
 "Language: el\n"
@@ -1019,7 +1019,7 @@ msgstr "Συνολικό πλήθος"
 
 #: js/messages.php:54
 msgid "The host name is empty!"
-msgstr "Το όνομα του Συστήματος είναι κενό!"
+msgstr "Το όνομα του συστήματος είναι κενό!"
 
 #: js/messages.php:55
 msgid "The user name is empty!"
