--- a/po/el.po
+++ b/po/el.po
@@ -1027,7 +1027,7 @@ msgstr "Το όνομα του χρήστη είναι κενό!"
 
 #: js/messages.php:56 server_privileges.php:1307 user_password.php:50
 msgid "The password is empty!"
-msgstr "Ο Κωδικός Πρόσβασης είναι κενός!"
+msgstr "Ο κωδικός πρόσβασης είναι κενός!"
 
 #: js/messages.php:57 server_privileges.php:1305 user_password.php:53
 msgid "The passwords aren't the same!"
