--- a/po/el.po
+++ b/po/el.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-29 13:20+0200\n"
+"PO-Revision-Date: 2011-07-29 13:21+0200\n"
 "Last-Translator: Panagiotis Papazoglou <papaz_p@yahoo.com>\n"
 "Language-Team: greek <el@li.org>\n"
 "Language: el\n"
@@ -1493,7 +1493,7 @@ msgstr "Σημείωση: Αν το αρχείο περιέχει πολλούς
 
 #: js/messages.php:200
 msgid "Hide query box"
-msgstr "Απόκρυψη παραθύρου ερωτήματος SQL"
+msgstr "Απόκρυψη παραθύρου ερωτήματος"
 
 #: js/messages.php:201
 msgid "Show query box"
