--- a/po/el.po
+++ b/po/el.po
@@ -2052,7 +2052,7 @@ msgstr "Σφάλμα μετονομασίας του πίνακα %1$s σε %2$s
 #: libraries/Table.class.php:1146
 #, php-format
 msgid "Table %s has been renamed to %s"
-msgstr "Ο Πίνακας %s μετονομάσθηκε σε %s"
+msgstr "Ο πίνακας %s μετονομάσθηκε σε %s"
 
 #: libraries/Table.class.php:1274
 msgid "Could not save table UI preferences"
