Translation update done using Pootle.

--- a/po/el.po
+++ b/po/el.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-29 13:24+0200\n"
+"PO-Revision-Date: 2011-07-29 13:25+0200\n"
 "Last-Translator: Panagiotis Papazoglou <papaz_p@yahoo.com>\n"
 "Language-Team: greek <el@li.org>\n"
 "Language: el\n"
@@ -2853,8 +2853,8 @@ msgid ""
 "Compress gzip/bzip2 exports on the fly without the need for much memory; if "
 "you encounter problems with created gzip/bzip2 files disable this feature"
 msgstr ""
-"Η συμπίεση gzip/bzip2 εξάγει άμεσα χωρίς την ανάγκη για πολύ μνήμη. Αν "
-"παρουσιάστηκαν προβλήματα με τα δημιουργηθέντα αρχεία gzip/bzip2 "
+"Η συμπίεση gzip/bzip2 εξάγει άμεσα χωρίς την ανάγκη για πολύ μνήμη, για αυτό "
+"αν παρουσιάστηκαν προβλήματα με τα δημιουργηθέντα αρχεία gzip/bzip2 "
 "απενεργοποιήστε αυτό το χαρακτηριστικό"
 
 #: libraries/config/messages.inc.php:40
