Translation update done using Pootle.

--- a/po/el.po
+++ b/po/el.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-29 13:26+0200\n"
+"PO-Revision-Date: 2011-07-29 13:27+0200\n"
 "Last-Translator: Panagiotis Papazoglou <papaz_p@yahoo.com>\n"
 "Language-Team: greek <el@li.org>\n"
 "Language: el\n"
@@ -4131,8 +4131,8 @@ msgid ""
 "Leave blank for no column comments/mime types, suggested: [kbd]"
 "pma_column_info[/kbd]"
 msgstr ""
-"Αφήστε κενό για να μη υπάρχουν σχόλια/τύποι mime στις στήλες. Προτείνεται: "
-"[kbd]pma_column_info[/kbd]"
+"Αφήστε κενό για να μη υπάρχουν σχόλια/τύποι mime στις στήλες, σας "
+"προτείνεται: [kbd]pma_column_info[/kbd]"
 
 #: libraries/config/messages.inc.php:374
 msgid "Column information table"
