Translation update done using Pootle.

--- a/po/el.po
+++ b/po/el.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-29 13:27+0200\n"
+"PO-Revision-Date: 2011-07-29 13:28+0200\n"
 "Last-Translator: Panagiotis Papazoglou <papaz_p@yahoo.com>\n"
 "Language-Team: greek <el@li.org>\n"
 "Language: el\n"
@@ -4335,8 +4335,8 @@ msgid ""
 "[/a] support, suggested: [kbd]pma_relation[/kbd]"
 msgstr ""
 "Αφήστε το κενό για να μην υπάρχει υποστήριξη "
-"[a@http://wiki.phpmyadmin.net/pma/relation]συνδέσμων-συσχετίσεων[/a]. "
-"Προτείνεται: [kbd]pma_relation[/kbd]"
+"[a@http://wiki.phpmyadmin.net/pma/relation]συνδέσμων-συσχετίσεων[/a], σας "
+"προτείνεται: [kbd]pma_relation[/kbd]"
 
 #: libraries/config/messages.inc.php:412
 msgid "Relation table"
