--- a/po/el.po
+++ b/po/el.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-29 13:28+0200\n"
+"PO-Revision-Date: 2011-07-29 13:30+0200\n"
 "Last-Translator: Panagiotis Papazoglou <papaz_p@yahoo.com>\n"
 "Language-Team: greek <el@li.org>\n"
 "Language: el\n"
@@ -4400,8 +4400,8 @@ msgid ""
 "Table to describe the display columns, leave blank for no support; "
 "suggested: [kbd]pma_table_info[/kbd]"
 msgstr ""
-"Ο πίνακας που περιγράφει τις προβαλλόμενες στήλες. Αφήστε το κενό για να μην "
-"υποστηρίζεται. Προτείνεται: [kbd]pma_table_info[/kbd]"
+"Ο πίνακας που περιγράφει τις προβαλλόμενες στήλες - αφήστε το κενό για να "
+"μην υποστηρίζεται - προτείνεται: [kbd]pma_table_info[/kbd]"
 
 #: libraries/config/messages.inc.php:425
 msgid "Display columns table"
