Translation update done using Pootle.

--- a/po/el.po
+++ b/po/el.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-29 13:31+0200\n"
+"PO-Revision-Date: 2011-07-29 13:32+0200\n"
 "Last-Translator: Panagiotis Papazoglou <papaz_p@yahoo.com>\n"
 "Language-Team: greek <el@li.org>\n"
 "Language: el\n"
@@ -4545,7 +4545,7 @@ msgid ""
 msgstr ""
 "Σημειώστε ότι ενεργοποιώντας αυτή δεν έχει καμιά επίδραση στην κατάσταση "
 "επικύρωσης [kbd]ρύθμισης[/kbd] γιατί έχει πολύ κωδικοποίηση στο αρχείο "
-"ρυθμίσεων. Αυτό δεν περιορίζει τη δυνατότητα άμεσης εκτέλεσης της ίδιας "
+"ρυθμίσεων και αυτό δεν περιορίζει τη δυνατότητα άμεσης εκτέλεσης της ίδιας "
 "εντολής"
 
 #: libraries/config/messages.inc.php:451
