--- a/po/el.po
+++ b/po/el.po
@@ -6008,7 +6008,7 @@ msgstr "Αντικατάσταση τιμής NULL με:"
 
 #: libraries/export/csv.php:29 libraries/export/excel.php:24
 msgid "Remove carriage return/line feed characters within columns"
-msgstr "Απομάκρυνση χαρακτήρων CRLF μέσα στις στήλες"
+msgstr "Απομάκρυνση χαρακτήρων αλλαγής γραμμής μέσα στις στήλες"
 
 #: libraries/export/excel.php:33
 msgid "Excel edition:"
